[package]
name = "swaylayout"
version = "0.1.0"
description = "Get current Sway keyboard layout"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
repository = "https://github.com/filalex77/swaylayout"
license = "MIT"
edition = "2018"

[dependencies]
# TODO: merge the PR!
# https://github.com/JayceFayne/swayipc-rs/pull/1
paw = "1.0.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
structopt = { version = "0.3.5", features = ["paw"] }
swayipc = { git = "https://github.com/filalex77/swayipc-rs", branch = "fix-inputs" }
thiserror = "1.0.9"
# TODO: features=["async"]
