[package]
name = "swaylayout"
version = "0.2.1-alpha.0"
description = "Get current Sway keyboard layout"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
repository = "https://github.com/filalex77/swaylayout"
license = "MIT"
edition = "2018"

[dependencies]
paw = "1.0.0"
structopt = { version = "0.3.5", features = ["paw"] }
# TODO: features=["async"]
swayipc = { path = "external/swayipc-rs" }
thiserror = "1.0.9"
