[package]
name = "swaylayout"
version = "0.3.1"
description = "Get current Sway keyboard layout"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
repository = "https://github.com/filalex77/swaylayout"
license = "MIT"
edition = "2018"

[dependencies]
paw = "1.0.0"
structopt = { version = "0.3.5", features = ["paw"] }
swayipc = "2.2.6"
thiserror = "1.0.9"
